fix open class for application

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,6 @@
 
     <application
         android:usesCleartextTraffic="true"
-        android:name=".application.BaseApplication"/>
+        android:name=".application.OfflineApplication"/>
 
 </manifest>
